[fix] User -> Employee 엔티티로 변경된 사항 수정